deployment/yaml/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpro-kube-app-ns
  labels:
    app: cpro-application
