deployment/yaml/21-bankweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpro-bankweb
  namespace: cpro-kube-app-ns
  labels:
    app: cpro-application
    subname: bankweb
spec:
  selector:
    matchLabels:
      app: cpro-application
      subname: bankweb
  replicas: 1
  template:
    metadata:
      labels:
        app: cpro-application
        subname: bankweb
    spec:
      containers:
        - name: container-web
          image: "gandigit/cpro-bankweb:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9030
              protocol: TCP
            - name: https
              containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: cpro-bankweb
  namespace: cpro-kube-app-ns
  labels:
    app: cpro-application
    subname: bankweb
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9090'
    prometheus.io/path: '/actuator/prometheus'
    mcm.ibm.com/service-discovery: "{}"
spec:
  type: ClusterIP
  ports:
    - name: my-http
      port: 9090
      targetPort: 9030
  selector:
    app: cpro-application
    subname: bankweb
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cpro-bankweb
  namespace: cpro-kube-app-ns
  labels:
    app: cpro-application
    subname: bankweb
spec:
  path: /
  to:
    kind: Service
    name: cpro-bankweb
    weight: 100
  port:
    targetPort: my-http
