deployment/yaml/22-commission.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpro-commission
  namespace: cpro-kube-app-ns
  labels:
    app: cpro-application
    subname: commission
spec:
  selector:
    matchLabels:
      app: cpro-application
      subname: commission
  replicas: 1
  template:
    metadata:
      labels:
        app: cpro-application
        subname: commission          
    spec:
      containers:
        - name: container-commission
          image: "gandigit/cpro-commission:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9031
              protocol: TCP
            - name: https
              containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: cpro-commission
  namespace: cpro-kube-app-ns
  labels:
    app: cpro-application
    subname: commission
  annotations:
    prometheus.io/scrape: 'true' 
    prometheus.io/port: '9091'
    prometheus.io/path: '/commission/actuator/prometheus'
    mcm.ibm.com/service-discovery: "{}"            
spec:
  type: ClusterIP
  ports:
    - name: my-http
      port: 9090
      targetPort: 9031
  selector:
    app: cpro-application
    subname: commission
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cpro-commission
  namespace: cpro-kube-app-ns
  labels:
    app: cpro-application
    subname: commission
spec:
  path: /
  to:
    kind: Service
    name: cpro-commission
    weight: 100
  port:
    targetPort: my-http
