deployment/yaml/23-interest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpro-interest
  namespace: cpro-kube-app-ns
  labels:
    app: cpro-application
    subname: interest
spec:
  selector:
    matchLabels:
      app: cpro-application
      subname: interest
  replicas: 1
  template:
    metadata:
      labels:
        app: cpro-application
        subname: interest          
    spec:
      containers:
        - name: container-interest
          image: "gandigit/cpro-interest:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9032
              protocol: TCP
            - name: https
              containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: cpro-interest
  namespace: cpro-kube-app-ns
  labels:
    app: cpro-application
    subname: interest
  annotations:
    mcm.ibm.com/service-discovery: "{}"            
spec:
  type: ClusterIP
  ports:
    - name: my-http
      port: 9090
      targetPort: 9032
  selector:
    app: cpro-application
    subname: interest
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cpro-interest
  namespace: cpro-kube-app-ns
  labels:
    app: cpro-application
    subname: interest
spec:
  path: /
  to:
    kind: Service
    name: cpro-interest
    weight: 100
  port:
    targetPort: my-http
