deployment/yaml/24-payment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpro-payment
  namespace: cpro-kube-app-ns
  labels:
    app: cpro-application
    subname: payment
spec:
  selector:
    matchLabels:
      app: cpro-application
      subname: payment
  replicas: 1
  template:
    metadata:
      labels:
        app: cpro-application
        subname: payment          
    spec:
      containers:
        - name: container-payment
          image: "gandigit/cpro-payment:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9033
              protocol: TCP
            - name: https
              containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: cpro-payment
  namespace: cpro-kube-app-ns
  labels:
    app: cpro-application
    subname: payment
  annotations:
    prometheus.io/scrape: 'true' 
    prometheus.io/port: '9091'
    prometheus.io/path: '/payment/actuator/prometheus'
    mcm.ibm.com/service-discovery: "{}"            
spec:
  type: ClusterIP
  ports:
    - name: my-http
      port: 9090
      targetPort: 9033
  selector:
    app: cpro-application
    subname: payment
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cpro-payment
  namespace: cpro-kube-app-ns
  labels:
    app: cpro-application
    subname: payment
spec:
  path: /
  to:
    kind: Service
    name: cpro-payment
    weight: 100
  port:
    targetPort: my-http
